[package]
name = "ptp-rs"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.2"
toml = "0.5.3"
serde = "1.0.99"
serde_derive = "1.0.99"
