[package]
name = "ptp-rs"
version = "0.2.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
regex = "1.2.1"
reqwest = "0.9.20"
toml = "0.5.3"
url = "2.1.0"
